fix: gap no  @media querry

--- a/projeto2.css
+++ b/projeto2.css
@@ -208,7 +208,7 @@ button {
   .btt .circle-buttons {
     display: flex;
     flex-wrap: wrap; /* permite quebrar linha se necessário */
-    gap: 3px;
+    gap: 2.5px;
     width: 100%;
    }
 
